# PlatypusMacaque

./: .gitignore  README.md  requirements.yml
Experiments/Ablation-Experiment/: ablation_experiment.sh  analyze_ablation_experiment.sh  analyze_multiple_datasets.sh  gorilla_only.patch  macaque_only.patch  pmc_and_swing_only.patch  pmc_only.patch  powerlog_fauna_coefs.csv  powerlog_output.csv  process_fauna_logs_with_coefficients.py  process_logs.py  swing_only.patch  turbinelog_fauna_coefs.csv  turbinelog_output.csv
Experiments/Batch-Size/: batch_size_experiment.sh  compression_size_output.csv  ingest_modelardb.sh  powerlog_mem_usage.csv  process_logs.py  track_process_memory_use.sh
Experiments/Evaluation-Entire-Datasets/: README.md  decompression_test.py  extract_log_files.py  ingest_datasets_time_decompression_time.sh
Experiments/Extract-Residuals/: README.md  clean_and_stop_modelardb.sh  filter_out_gorilla_indexes.py  get_all_data_points.py  ingest_only_gorilla.sh  merge_model_distribution_results.py
Experiments/Impact-Proposed-Methods/: ingest_dataset.sh  process_impact_optimizations_logs.py
Experiments/Model-Types-Used/: README.md
ModelarDB-versions/: README.md  check_storage_sizes.sh
ModelarDB-versions/ModelarDB-ALP/: Cargo.toml  README.md  (+2 more)
ModelarDB-versions/ModelarDB-ALP/crates/alp_cc/: Cargo.toml  build.rs
ModelarDB-versions/ModelarDB-ALP/crates/alp_cc/include/: alp_state_values.hpp
ModelarDB-versions/ModelarDB-ALP/crates/alp_cc/src/: lib.rs
Utilities/: README.md  compute_storage_insights.py  ingest_parquet_to_modelardb.py
data/: README.txt
(+136 files in other folders)
