# Copyright 2023 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# 
# For ALP: 2023 CWI, Azim Afroozeh,  Leonardo Xavier Kuffo Rivero

[package]
name = "alp_cc"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Abduvoris Abduvakhobov, Azim Afroozeh,  Leonardo Xavier Kuffo Rivero"]

[dependencies]
arrow.workspace = true
cxx.workspace = true

[build-dependencies]
cxx-build = "1.0"